--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pubnub": "^8.2.3"
   },
   "devDependencies": {
+    "@vitest/ui": "^1.6.0",
     "cross-env": "^7.0.3",
     "nodemon": "^3.1.3",
     "uuid": "^10.0.0",
